messed with formatting

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -47,7 +47,13 @@ img {
     vertical-align: middle;
 }
 
-
+/**
+ * Canvas
+ */
+ canvas {
+    border:1px solid #cf350f;
+    background-color: #f1f1f1;
+}
 
 /**
  * Figures
