--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -51,7 +51,8 @@ img {
  * Canvas
  */
  canvas {
-    border:1px solid #cf350f;
+    display: inline-block;
+    border:1px solid #8504c0;
     background-color: #f1f1f1;
 }
 
