--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
             <div class="col-sm-7">
                 <div class="header-content">
                     <div class="header-content-inner">
-                        <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-                        <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
+                        <h1>Name is an early-learning app that engages your child by adapting to their learning styles!</h1>
+                        <a href="#download" class="btn btn-outline btn-xl page-scroll">Try it now for free!</a>
                     </div>
                 </div>
             </div>
