--- a/css/main.scss
+++ b/css/main.scss
@@ -34,11 +34,17 @@
 // }
 
 // variables.less link and gradient background
-$head-primary: #7b4397 ;
+// $head-primary: #7b4397 ;
+// $head-secondary: #dc2430 ;
+// $theme-primary: #fdcc52 ;
+// $theme-secondary: #fdc539 ;
+// $theme-dark: #222;
+$head-primary: #772786 ;
 $head-secondary: #dc2430 ;
-$theme-primary: #fdcc52 ;
-$theme-secondary: #fdc539 ;
+$theme-primary: #52fd60 ;
+$theme-secondary: #7439fd ;
 $theme-dark: #222;
+
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
