--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
+                        <h2>Unlimited Power!</h2>
                         <p class="text-muted">Check out what you can do with this app theme!</p>
                         <hr>
                     </div>
@@ -31,15 +31,15 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <h3>Engage</h3>
+                                    <p class="text-muted">the interest of your child with an educational app catered to them</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <h3>Adapt</h3>
+                                    <p class="text-muted">to your child's preferred learning styles using Artificial Intelligence</p>
                                 </div>
                             </div>
                         </div>
@@ -47,15 +47,15 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                    <h3>Prepare</h3>
+                                    <p class="text-muted">essential skills before going to school</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                    <h3>Recognize</h3>
+                                    <p class="text-muted">early signs of learning disabilities</p>
                                 </div>
                             </div>
                         </div>
