medium amounts of stuff added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,8 @@
 <section class="cta">
     <div class="cta-content">
         <div class="container">
-            <h2>Help it. By<br>little actions.</h2>
-            <a href="/funds" class="btn btn-outline btn-xl page-scroll">How I can?!</a>
+            <h2>Tell us what<br> you want!</h2>
+            <a href="/funds" class="btn btn-outline btn-xl page-scroll">Give feedback</a>
         </div>
     </div>
     <div class="overlay"></div>
