--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 <div class="header-content">
                     <div class="header-content-inner">
                         <h1>Name is an early-learning app that engages your child by adapting to their learning styles!</h1>
-                        <a href="#download" class="btn btn-outline btn-xl page-scroll">Try it now for free!</a>
+                        <a href="#download" class="btn btn-outline btn-xl page-scroll">Download now for free!</a>
                     </div>
                 </div>
             </div>
