--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,5 +1,5 @@
 <section id="why">
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">At Your Service</h2>
@@ -7,35 +7,35 @@
                 <br />
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <i class="fa fa-4x fa-magnet wow bounceIn text-primary"></i>
+                    <h3>Engage</h3>
+                    <p class="text-muted">the interest of your child with an educational app catered to them</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-sliders wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Adapt</h3>
+                    <p class="text-muted">to your child's preferred learning styles using Artificial Intelligence</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <i class="fa fa-4x fa-bar-chart wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Prepare</h3>
+                    <p class="text-muted">essential skills before going to school</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <i class="fa fa-4x fa-line-chart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Recognize</h3>
+                    <p class="text-muted">talents, skills, or even early signs of learning disabilities</p>
                 </div>
             </div>
         </div>
