--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,7 +1,7 @@
 
     <section id="features" class="features">
         <div class="container">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
                         <h2>Unlimited Power!</h2>
@@ -9,62 +9,66 @@
                         <hr>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
-                <div class="col-md-4">
-                    <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
-                            <div class="device">
-                                <div class="screen">
+                <!-- <div class="col-md-4"> -->
+                    <!-- <div class="device-container"> -->
+                        <!-- <div class="device-mockup iphone6_plus portrait white"> -->
+                            <!-- <div class="device"> -->
+                                <!-- <div class="screen"> -->
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="/img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
-                                <div class="button">
+                                    <!-- <img src="/img/demo-screen-1.jpg" class="img-responsive" alt=""> </div> -->
+                                <!-- <div class="button"> -->
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-8">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-6">
+                                <!-- </div> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-md-8"> -->
+                    <!-- <div class="container-fluid"> -->
+                        <!-- <div class="row"> -->
+                            <!-- <div class="col-md-6"> -->
+                            <div class="col-lg-3 col-md-6 text-center">
                                 <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
+                                    <i class="icon-magnet text-primary"></i>
                                     <h3>Engage</h3>
                                     <p class="text-muted">the interest of your child with an educational app catered to them</p>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <!-- <div class="col-md-6"> -->
+                            <div class="col-lg-3 col-md-6 text-center">
                                 <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
+                                    <i class="icon-equalizer text-primary"></i>
                                     <h3>Adapt</h3>
                                     <p class="text-muted">to your child's preferred learning styles using Artificial Intelligence</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
+                        <!-- </div> -->
+                        <!-- <div class="row"> -->
+                            <!-- <div class="col-md-6"> -->
+                            <div class="col-lg-3 col-md-6 text-center">
                                 <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
+                                    <i class="icon-chart text-primary"></i>
                                     <h3>Prepare</h3>
                                     <p class="text-muted">essential skills before going to school</p>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <!-- <div class="col-md-6"> -->
+                            <div class="col-lg-3 col-md-6 text-center">
                                 <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
+                                    <i class="icon-graph text-primary"></i>
                                     <h3>Recognize</h3>
-                                    <p class="text-muted">early signs of learning disabilities</p>
+                                    <p class="text-muted">talents, skills, or even early signs of learning disabilities</p>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-8">
+                        <!-- </div> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-md-8">
                   <h3>Hosts it in the best cloud hosting on the market</h3>
                   <a target="_blank" href="https://m.do.co/c/a29d90274371" style="color:black" class="btn btn-outline btn-xl">Digital Ocean</a>  
-                </div>
+                </div> -->
 
             </div>
     </section>
