added photos and changed to ipad air2

--- a/_layouts/funds.html
+++ b/_layouts/funds.html
@@ -8,7 +8,7 @@
   {% include header-funds.html %}
   {% include call-to-action-funds.html %}
   {% include feature-funds.html %}
-  {% include portfolio-funds.html %}
+  <!-- {% include portfolio-funds.html %} -->
   {% include services-funds.html %}
   {% include aside-funds.html %}
   {% include contact.html %}
