--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h2 class="section-heading">Get more free time in your day!</h2>
-                <p>Our app is available on any mobile device! Download now to get started!</p>
+                <p>Our app is available on any mobile device or tablet! Download now to get started!</p>
                 <div class="badges">
                     <a class="badge-link" href="#"><img src="/img/google-play-badge.svg" alt=""></a>
                     <a class="badge-link" href="#"><img src="/img/app-store-badge.svg" alt=""></a>
