semi-final format?

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,9 +1,11 @@
-<section id="download" class="download bg-primary text-center">
+<!-- <section id="download" class="download bg-primary text-center"> -->
+<section id="download" class="download free_time text-center">
     <div class="container">
         <div class="row">
+            <div class="overlay"></div>
             <div class="col-md-8 col-md-offset-2">
-                <h2 class="section-heading">Get more free time in your day!</h2>
-                <p>Our app is available on any mobile device or tablet! Download now to get started!</p>
+                <h2 class="section-heading" style="color:rgb(255, 255, 255)">Get more free time in your day!</h2>
+                <p style="color:rgb(255, 255, 255)">Available on all platforms</p>
                 <div class="badges">
                     <a class="badge-link" href="#"><img src="/img/google-play-badge.svg" alt=""></a>
                     <a class="badge-link" href="#"><img src="/img/app-store-badge.svg" alt=""></a>
