--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -320,6 +320,35 @@ section {
       left: 0;
     }
   }
+  &.free_time {
+    position: relative;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-image: url('../img/distracted_kid-2.jpg');
+    padding: 250px 0;
+    .free_time-content {
+      position: relative;
+      z-index: 1;
+      h2 {
+        margin-top: 0;
+        margin-bottom: 25px;
+        color: white;
+        max-width: 450px;
+        font-size: 50px;
+      }
+    }
+    .overlay {
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
   &.cta-donate {
     position: relative;
     -webkit-background-size: cover;
