--- a/_includes/feature-funds.html
+++ b/_includes/feature-funds.html
@@ -1,4 +1,4 @@
-<section id="why">
+<!-- <section id="why">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -51,4 +51,4 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
