--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,4 +1,4 @@
-<section id="why">
+<!-- <section id="why"> -->
     <!-- <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -8,7 +8,7 @@
             </div>
         </div>
     </div> -->
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
@@ -39,5 +39,5 @@
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </div> -->
+<!-- </section> -->
