--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,29 +1,29 @@
-<section id="portfolio" class="download bg-primary text-center">
-    <div class="container">
+<!-- <section id="portfolio" class="download bg-primary text-center"> -->
+    <!-- <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h2 class="section-heading">Our best products! <i style="color:#21cddb" class="fa fa-globe"></i></h2>
                 <p>Try our amazing products</p>
-                <hr>
-                {% if site.data-ad-client %}
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <hr> -->
+                <!-- {% if site.data-ad-client %} -->
+                <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
                 <!-- jekynewage -->
-                <ins class="adsbygoogle"
+                <!-- <ins class="adsbygoogle"
                     style="display:block"
                     data-ad-client="{{ site.data-ad-client }}"
                     data-ad-slot="{{ site.data-ad-slot }}"
-                    data-ad-format="auto"></ins>
-                <script>
+                    data-ad-format="auto"></ins> -->
+                <!-- <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
-                {% endif %}
-            </div>
-        </div>
-    </div>
-</section>
+                {% endif %} -->
+            <!-- </div> -->
+        <!-- </div> -->
+    <!-- </div> -->
+<!-- </section> -->
 
-<section class="no-padding" id="portfolio">
-    <div class="container-fluid">
+<!-- <section class="no-padding" id="portfolio"> -->
+    <!-- <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
@@ -116,5 +116,5 @@
                 </a>
             </div>
         </div>
-    </div>
-</section>
+    </div> -->
+<!-- </section> -->
