--- a/_includes/services.html
+++ b/_includes/services.html
@@ -49,7 +49,8 @@
                             <!-- <div class="col-md-6"> -->
                             <div class="col-lg-3 col-md-6 text-center">
                                 <div class="feature-item">
-                                    <i class="icon-chart text-primary"></i>
+                                    <!-- <i class="icon-chart text-primary"></i> -->
+                                    <i class="fa fa-leanpub text-primary"></i>
                                     <h3>Prepare</h3>
                                     <p class="text-muted">essential skills before going to school</p>
                                 </div>
