--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -169,6 +169,7 @@ header {
     position: relative;
     .header-content-inner {
       position: relative;
+    //   text-align: center;
       max-width: 500px;
       margin: 0 auto;
       h1 {
@@ -534,145 +535,145 @@ body {
 
 // Added style by Antonio
 
-.no-padding {
-    padding: 0;
-}
+// .no-padding {
+//     padding: 0;
+// }
 
-.portfolio-box {
-    position: relative;
-    display: block;
-    max-width: 650px;
-    margin: 0 auto;
-    .portfolio-box-caption {
-        color: white;
-        opacity: 0;
-        display: block;
-        background: rgba( $theme-primary, .9 );
-        position: absolute;
-        bottom: 0;
-        text-align: center;
-        width: 100%;
-        height: 100%;
-        @include transition-all;
-        .portfolio-box-caption-content {
-            width: 100%;
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            .project-category,
-            .project-name {
-                @include sans-serif-font;
-                padding: 0 15px;
-            }
-            .project-category {
-                text-transform: uppercase;
-                font-weight: 600;
-                font-size: 14px;
-            }
-            .project-name {
-                font-size: 18px;
-            }
-        }
-    }
-    &:hover {
-        .portfolio-box-caption {
-            opacity: 1;
-        }
-    }
-    @media (min-width: 768px) {
-        .portfolio-box-caption {
-            .portfolio-box-caption-content {
-                .project-category {
-                    font-size: 16px;
-                }
-                .project-name {
-                    font-size: 22px;
-                }
-            }
-        }
-    }
-}
+// .portfolio-box {
+//     position: relative;
+//     display: block;
+//     max-width: 650px;
+//     margin: 0 auto;
+//     .portfolio-box-caption {
+//         color: white;
+//         opacity: 0;
+//         display: block;
+//         background: rgba( $theme-primary, .9 );
+//         position: absolute;
+//         bottom: 0;
+//         text-align: center;
+//         width: 100%;
+//         height: 100%;
+//         @include transition-all;
+//         .portfolio-box-caption-content {
+//             width: 100%;
+//             text-align: center;
+//             position: absolute;
+//             top: 50%;
+//             transform: translateY(-50%);
+//             .project-category,
+//             .project-name {
+//                 @include sans-serif-font;
+//                 padding: 0 15px;
+//             }
+//             .project-category {
+//                 text-transform: uppercase;
+//                 font-weight: 600;
+//                 font-size: 14px;
+//             }
+//             .project-name {
+//                 font-size: 18px;
+//             }
+//         }
+//     }
+//     &:hover {
+//         .portfolio-box-caption {
+//             opacity: 1;
+//         }
+//     }
+//     @media (min-width: 768px) {
+//         .portfolio-box-caption {
+//             .portfolio-box-caption-content {
+//                 .project-category {
+//                     font-size: 16px;
+//                 }
+//                 .project-name {
+//                     font-size: 22px;
+//                 }
+//             }
+//         }
+//     }
+// }
 
 // post styles
 
-.intro-header {
-  background: no-repeat center center;
-  background-color: #808080;
-  background-attachment: scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  margin-bottom: 50px;
-  .site-heading, .post-heading, .page-heading {
-    padding: 100px 0 50px;
-    color: white;
-  }
-  .site-heading, .page-heading {
-    text-align: center;
-  }
-  .site-heading h1, .page-heading h1 {
-    margin-top: 0;
-    font-size: 50px;
-  }
-  .site-heading .subheading, .page-heading .subheading {
-    font-size: 24px;
-    line-height: 1.1;
-    display: block;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-weight: 300;
-    margin: 10px 0 0;
-  }
-  .post-heading {
-    h1 {
-      font-size: 35px;
-    }
-    .subheading, .meta {
-      line-height: 1.1;
-      display: block;
-    }
-    .subheading {
-      font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      font-size: 24px;
-      margin: 10px 0 30px;
-      font-weight: 600;
-    }
-    .meta {
-      font-family: 'Lora', 'Times New Roman', serif;
-      font-style: italic;
-      font-weight: 300;
-      font-size: 20px;
-      a {
-        color: white;
-      }
-    }
-  }
-}
+// .intro-header {
+//   background: no-repeat center center;
+//   background-color: #808080;
+//   background-attachment: scroll;
+//   -webkit-background-size: cover;
+//   -moz-background-size: cover;
+//   background-size: cover;
+//   -o-background-size: cover;
+//   margin-bottom: 50px;
+//   .site-heading, .post-heading, .page-heading {
+//     padding: 100px 0 50px;
+//     color: white;
+//   }
+//   .site-heading, .page-heading {
+//     text-align: center;
+//   }
+//   .site-heading h1, .page-heading h1 {
+//     margin-top: 0;
+//     font-size: 50px;
+//   }
+//   .site-heading .subheading, .page-heading .subheading {
+//     font-size: 24px;
+//     line-height: 1.1;
+//     display: block;
+//     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+//     font-weight: 300;
+//     margin: 10px 0 0;
+//   }
+//   .post-heading {
+//     h1 {
+//       font-size: 35px;
+//     }
+//     .subheading, .meta {
+//       line-height: 1.1;
+//       display: block;
+//     }
+//     .subheading {
+//       font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+//       font-size: 24px;
+//       margin: 10px 0 30px;
+//       font-weight: 600;
+//     }
+//     .meta {
+//       font-family: 'Lora', 'Times New Roman', serif;
+//       font-style: italic;
+//       font-weight: 300;
+//       font-size: 20px;
+//       a {
+//         color: white;
+//       }
+//     }
+//   }
+// }
 
-@media only screen and (min-width: 768px) {
-  .intro-header {
-    .site-heading, .post-heading, .page-heading {
-      padding: 150px 0;
-    }
-  }
-}
+// @media only screen and (min-width: 768px) {
+//   .intro-header {
+//     .site-heading, .post-heading, .page-heading {
+//       padding: 150px 0;
+//     }
+//   }
+// }
 
-@media only screen and (min-width: 768px) {
-  .intro-header {
-    .site-heading h1, .page-heading h1 {
-      font-size: 80px;
-    }
-  }
-}
+// @media only screen and (min-width: 768px) {
+//   .intro-header {
+//     .site-heading h1, .page-heading h1 {
+//       font-size: 80px;
+//     }
+//   }
+// }
 
-@media only screen and (min-width: 768px) {
-  .intro-header .post-heading {
-    h1 {
-      font-size: 55px;
-    }
-    .subheading {
-      font-size: 30px;
-    }
-  }
-}
+// @media only screen and (min-width: 768px) {
+//   .intro-header .post-heading {
+//     h1 {
+//       font-size: 55px;
+//     }
+//     .subheading {
+//       font-size: 30px;
+//     }
+//   }
+// }
