--- a/_includes/services.html
+++ b/_includes/services.html
@@ -59,8 +59,8 @@
                             <div class="col-lg-3 col-md-6 text-center">
                                 <div class="feature-item">
                                     <i class="icon-graph text-primary"></i>
-                                    <h3>Recognize</h3>
-                                    <p class="text-muted">talents, skills, or even early signs of learning disabilities</p>
+                                    <h3>Provide</h3>
+                                    <p class="text-muted">useful feedback on your child's learning strengths and weaknesses</p>
                                 </div>
                             </div>
                         <!-- </div> -->
