--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -8,8 +8,8 @@
             </div>
         </div>
     </div> -->
-    <!-- <div class="container">
-        <div class="row">
+    <div class="container">
+        <!-- <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-magnet wow bounceIn text-primary"></i>
@@ -38,6 +38,6 @@
                     <p class="text-muted">talents, skills, or even early signs of learning disabilities</p>
                 </div>
             </div>
-        </div>
-    </div> -->
+        </div> -->
+    </div>
 </section>
