--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,9 +4,11 @@
         <div class="row">
             <div class="overlay"></div>
             <div class="col-md-8 col-md-offset-2">
-                <h2 class="section-heading" style="color:rgb(255, 255, 255)">Get more free time in your day!</h2>
-                <p style="color:rgb(255, 255, 255)">Coming soon to all platforms</p>
-                <a href="https://mailchimp.com/" class="btn btn-outline btn-xl">Join Mailing List</a>
+                <h2 class="section-heading" style="color:rgb(255, 255, 255)">Get more free time in your day, guilt-free!</h2>
+                <p style="color:rgb(255, 255, 255)">Coming soon to all platforms. Stay updated!</p>
+                <a href="http://eepurl.com/c_uCOn" class="btn btn-outline btn-xl">Join Mailing List</a>
+
+
                 <!-- <div class="badges">
                     <a class="badge-link" href="#"><img src="/img/google-play-badge.svg" alt=""></a>
                     <a class="badge-link" href="#"><img src="/img/app-store-badge.svg" alt=""></a>
