--- a/_includes/services.html
+++ b/_includes/services.html
@@ -33,7 +33,14 @@
                             <div class="feature-item">
                                 <i class="icon-magnet text-primary"></i>
                                 <h3>Engage</h3>
-                                <p class="text-muted">the interest of your child with an educational app catered to them</p>
+                                <p class="text-muted">the interest of your child with our adaptive educational app </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="feature-item">
+                                <i class="icon-graph text-primary"></i>
+                                <h3>Receive</h3>
+                                <p class="text-muted">useful feedback on your child's learning strengths and weaknesses</p>
                             </div>
                         </div>
                         <!-- <div class="col-md-6"> -->
@@ -47,20 +54,13 @@
                     <!-- </div> -->
                     <!-- <div class="row"> -->
                         <!-- <div class="col-md-6"> -->
+                        <!-- <div class="col-md-6"> -->
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="feature-item">
                                 <!-- <i class="icon-chart text-primary"></i> -->
                                 <i class="fa fa-leanpub text-primary"></i>
                                 <h3>Prepare</h3>
-                                <p class="text-muted">essential skills before going to school</p>
-                            </div>
-                        </div>
-                        <!-- <div class="col-md-6"> -->
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="feature-item">
-                                <i class="icon-graph text-primary"></i>
-                                <h3>Provide</h3>
-                                <p class="text-muted">useful feedback on your child's learning strengths and weaknesses</p>
+                                <p class="text-muted">your child with essential skills to get ahead before school</p>
                             </div>
                         </div>
                     <!-- </div> -->
@@ -71,4 +71,12 @@
                 <a target="_blank" href="https://m.do.co/c/a29d90274371" style="color:black" class="btn btn-outline btn-xl">Digital Ocean</a>  -->
         </div>
     </div>
+    <!-- <div class="containter text-center">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <p>Coming soon to all platforms. Stay updated!</p>
+                <a href="" class="btn btn-outline_gradient btn-xl">Join Mailing List</a>
+            </div>
+        </div>
+    </div> -->
 </section>
