added mailing list to navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,11 +18,11 @@
                     <a class="page-scroll" href="#download">Download</a>
                 </li> -->
                 <li>
+                    <a class="page-scroll" href="http://eepurl.com/c_uCOn">Mailing List</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#features">Features</a>
                 </li>
-                <!-- <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
-                </li> -->
                 <!-- <li>
                     <a class="page-scroll" href="/about_us">About Us</a>
                 </li> -->
