--- a/_includes/services.html
+++ b/_includes/services.html
@@ -40,7 +40,7 @@
                             <div class="feature-item">
                                 <i class="icon-graph text-primary"></i>
                                 <h3>Receive</h3>
-                                <p class="text-muted">useful feedback on your child's learning strengths and weaknesses</p>
+                                <p class="text-muted">useful feedback on your child's learning milestones, strengths, and weaknesses</p>
                             </div>
                         </div>
                         <!-- <div class="col-md-6"> -->
