changed mailing list to get my email off of it

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -6,7 +6,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <h2 class="section-heading" style="color:rgb(255, 255, 255)">Get more free time in your day, guilt-free!</h2>
                 <p style="color:rgb(255, 255, 255)">Coming soon to all platforms. Stay updated!</p>
-                <a href="http://eepurl.com/c_uCOn" class="btn btn-outline btn-xl">Join Mailing List</a>
+                <a href="http://eepurl.com/c_FONT" class="btn btn-outline btn-xl">Join Mailing List</a>
 
 
                 <!-- <div class="badges">
