--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
                     <a class="page-scroll" href="#download">Download</a>
                 </li> -->
                 <li>
-                    <a class="page-scroll" href="http://eepurl.com/c_uCOn">Mailing List</a>
+                    <a class="page-scroll" href="http://eepurl.com/c_FONT">Mailing List</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#features">Features</a>
