changed message on header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
                 <div class="header-content">
                     <div class="header-content-inner">
                         <!-- <h1>Name is an early-learning app that engages your child by adapting to their learning styles!</h1> -->
-                        <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child by adapting to their preferences!</h1>
+                        <!-- <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child by adapting to their preferences!</h1> -->
+                        <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child while keeping you informed!</h1>
                         <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Download now for free!</a> -->
                         <a href="#download" class="btn btn-outline btn-xl page-scroll">I'm interested!</a>
                     </div>
