removed italics on AdaptiveLearning

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                     <div class="header-content-inner">
                         <!-- <h1>Name is an early-learning app that engages your child by adapting to their learning styles!</h1> -->
                         <!-- <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child by adapting to their preferences!</h1> -->
-                        <h1><i>AdaptiveLearning</i> is an early-learning app that gives you feedback on your child's learning milestones!</h1>
+                        <h1>AdaptiveLearning is an early-learning app that gives you feedback on your child's learning milestones!</h1>
                         <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Download now for free!</a> -->
                         <a href="#download" class="btn btn-outline btn-xl page-scroll">I'm interested!</a>
                     </div>
