changed color scheme and name

--- a/css/main.scss
+++ b/css/main.scss
@@ -39,10 +39,10 @@
 // $theme-primary: #fdcc52 ;
 // $theme-secondary: #fdc539 ;
 // $theme-dark: #222;
-$head-primary: #772786 ;
-$head-secondary: #dc2430 ;
-$theme-primary: #52fd60 ;
-$theme-secondary: #7439fd ;
+$head-primary: #179b2d ;
+$head-secondary: #3ab8b8 ;
+$theme-primary: #a2c552 ;
+$theme-secondary: #4bdac2 ;
 $theme-dark: #222;
 
 
