got rid of old app image. new one coming in soon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 <header>
     <div class="container">
         <div class="row">
-            <div class="col-sm-7">
+            
+            <!-- <div class="col-sm-7"> -->
                 <div class="header-content">
-                    <div class="header-content-inner">
+                    <div class="header-content-inner text-center">
                         <!-- <h1>Name is an early-learning app that engages your child by adapting to their learning styles!</h1> -->
                         <!-- <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child by adapting to their preferences!</h1> -->
                         <h1>ConvexMind is an early-learning app that gives you feedback on your child's learning milestones!</h1>
@@ -11,24 +12,25 @@
                         <a href="#download" class="btn btn-outline btn-xl page-scroll">I'm interested!</a>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-5">
-                <div class="device-container">
+            
+            <!-- </div> -->
+            <!-- <div class="col-sm-5"> -->
+                <!-- <div class="device-container"> -->
                     <!-- <div class="device-mockup iphone6_plus portrait white"> -->
-                    <div class="device-mockup ipad_air_2 portrait black">
+                    <!-- <div class="device-mockup ipad_air_2 portrait black"> -->
                             
-                        <div class="device">
-                            <div class="screen">
+                        <!-- <div class="device"> -->
+                            <!-- <div class="screen"> -->
                                 <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                <img src="/img/demo-screen-1.jpg" class="img-responsive" alt="">
-                            </div>
+                                <!-- <img src="/img/demo-screen-1.jpg" class="img-responsive" alt=""> -->
+                            <!-- </div> -->
                             <!-- <div class="button">
                                 You can hook the "home button" to some JavaScript events or just remove it
                             </div> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
         </div>
     </div>
 </header>
