made 'im interested' button go directly to mailing list (fewer clicks)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
                         <!-- <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child by adapting to their preferences!</h1> -->
                         <h1>ConvexMind is an early-learning app that gives you feedback on your child's learning milestones!</h1>
                         <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Download now for free!</a> -->
-                        <a href="#download" class="btn btn-outline btn-xl page-scroll">I'm interested!</a>
+                        <a href="http://eepurl.com/c_FONT" class="btn btn-outline btn-xl page-scroll">I'm interested!</a>
+                        <!-- href="#download" -->
                     </div>
                 </div>
             
