updated the feature on learning style

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -47,8 +47,8 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="feature-item">
                                 <i class="icon-equalizer text-primary"></i>
-                                <h3>Adapt</h3>
-                                <p class="text-muted">to your child's preferred learning styles using Artificial Intelligence</p>
+                                <h3>Accelerate</h3>
+                                <p class="text-muted">your child's learning rate with games that adapt to their learning style</p>
                             </div>
                         </div>
                     <!-- </div> -->
