--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
 
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="AuofyFISgvQsH0iVH4cYCWUO4ltGM5VNLawjBMfpze8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
