updated website for demo day

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,37 +1,41 @@
 <header>
     <div class="container">
         <div class="row">
-            
-            <!-- <div class="col-sm-7"> -->
+                
+            <div class="col-sm-7">
                 <div class="header-content">
-                    <div class="header-content-inner text-center">
+                    <div class="header-content-inner text-left">
                         <!-- <h1>Name is an early-learning app that engages your child by adapting to their learning styles!</h1> -->
                         <!-- <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child by adapting to their preferences!</h1> -->
-                        <h1>ConvexMind is an educational gaming app that engages your child while giving you feedback on their learning milestones!</h1>
+                        <!-- <h1>ConvexMind is an educational gaming app that engages your child while giving you feedback on their learning milestones!</h1> -->
+                        <h1>Distract your child. <br/> 
+                            Get recommended activities. <br/>
+                            Accelerate literacy!</h1>
                         <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Download now for free!</a> -->
-                        <a href="http://eepurl.com/c_FONT" class="btn btn-outline btn-xl page-scroll">I'm interested!</a>
+                        <!-- <a href="http://eepurl.com/c_FONT" class="btn btn-outline btn-xl page-scroll">I'm interested!</a> -->
                         <!-- href="#download" -->
                     </div>
                 </div>
-            
-            <!-- </div> -->
-            <!-- <div class="col-sm-5"> -->
-                <!-- <div class="device-container"> -->
-                    <!-- <div class="device-mockup iphone6_plus portrait white"> -->
-                    <!-- <div class="device-mockup ipad_air_2 portrait black"> -->
-                            
-                        <!-- <div class="device"> -->
-                            <!-- <div class="screen"> -->
+            </div>
+
+            <div class="col-sm-5">
+                <div class="device-container">
+                    <div class="device-mockup iphone6_plus portrait black">
+                    <!-- <div class="device-mockup ipad_air_2 portrait white"> -->
+
+                        <div class="device">
+                            <div class="screen">
                                 <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                <!-- <img src="/img/demo-screen-1.jpg" class="img-responsive" alt=""> -->
-                            <!-- </div> -->
+                                <img src="/img/DemoLoginCapture.png" class="img-responsive" alt="">
+                            </div>
                             <!-- <div class="button">
                                 You can hook the "home button" to some JavaScript events or just remove it
                             </div> -->
-                        <!-- </div> -->
-                    <!-- </div> -->
-                <!-- </div> -->
-            <!-- </div> -->
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </div>
 </header>
