--- a/_includes/services.html
+++ b/_includes/services.html
@@ -33,22 +33,22 @@
                             <div class="feature-item">
                                 <i class="icon-magnet text-primary"></i>
                                 <h3>Engage</h3>
-                                <p class="text-muted">the interest of your child with our adaptive educational app </p>
+                                <p class="text-muted">the interest of your child with our gaming app that adapts to them </p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="feature-item">
                                 <i class="icon-graph text-primary"></i>
                                 <h3>Receive</h3>
-                                <p class="text-muted">useful feedback on your child's learning milestones, strengths, and weaknesses</p>
+                                <p class="text-muted">useful feedback on your child's learning milestones and latest interests</p>
                             </div>
                         </div>
                         <!-- <div class="col-md-6"> -->
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="feature-item">
                                 <i class="icon-equalizer text-primary"></i>
-                                <h3>Accelerate</h3>
-                                <p class="text-muted">your child's learning rate with games that adapt to their learning style</p>
+                                <h3> Explore </h3>
+                                <p class="text-muted"> new activities with your child and interact with them based on those interests </p>
                             </div>
                         </div>
                     <!-- </div> -->
@@ -59,8 +59,8 @@
                             <div class="feature-item">
                                 <!-- <i class="icon-chart text-primary"></i> -->
                                 <i class="fa fa-leanpub text-primary"></i>
-                                <h3>Prepare</h3>
-                                <p class="text-muted">your child with essential skills to get ahead before school</p>
+                                <h3>Accelerate</h3>
+                                <p class="text-muted">the literacy of your child and open up the world of independent learning</p>
                             </div>
                         </div>
                     <!-- </div> -->
