fixed sizing issue. cenetered our message

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
                 
             <div class="col-sm-7">
                 <div class="header-content">
-                    <div class="header-content-inner text-left">
+                    <div class="header-content-inner text-center">
                         <!-- <h1>Name is an early-learning app that engages your child by adapting to their learning styles!</h1> -->
                         <!-- <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child by adapting to their preferences!</h1> -->
                         <!-- <h1>ConvexMind is an educational gaming app that engages your child while giving you feedback on their learning milestones!</h1> -->
