--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -568,11 +568,12 @@ img {
   width: auto;
   max-height: 72px;
   max-width: 250px;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  // left: 50%;
-  transform: translate(-50%, -50%);
+  margin-top: -12px;
+  // margin: 0;
+  // position: absolute;
+  // top: 50%;
+  // // left: 50%;
+  // transform: translate(0%, -50%);
 }
 
 body {
