--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,8 +5,8 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <!-- <a class="navbar-brand page-scroll" href="#page-top">ConvexMind</a> -->
             <a class="navbar-brand page-scroll" href="#page-top"><img src="/img/logo.png" class="img-logo" alt=""></a>
+            <!-- <a class="navbar-brand page-scroll" href="#page-top">ConvexMind</a> -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,7 +19,8 @@
                     <a class="page-scroll" href="#download">Download</a>
                 </li> -->
                 <li>
-                    <a class="page-scroll" href="http://eepurl.com/c_FONT">Mailing List</a>
+                    <!-- <a class="page-scroll" href="http://eepurl.com/c_FONT">Mailing List</a> -->
+                    <a class="page-scroll" href="#download">Mailing List</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#features">Features</a>
