tweaking message a bit

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -34,13 +34,14 @@
                                 <i class="icon-magnet text-primary"></i>
                                 <h3>Engage</h3>
                                 <p class="text-muted">the interest of your child with our gaming app that adapts to them </p>
+                                <!-- <p class="text-muted">your child with our gaming app that adapts to their interests</p> -->
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="feature-item">
                                 <i class="icon-graph text-primary"></i>
                                 <h3>Receive</h3>
-                                <p class="text-muted">useful feedback on your child's learning milestones and latest interests</p>
+                                <p class="text-muted">useful feedback on your child's learning milestones, reading level, & interests</p>
                             </div>
                         </div>
                         <!-- <div class="col-md-6"> -->
@@ -48,7 +49,7 @@
                             <div class="feature-item">
                                 <i class="icon-equalizer text-primary"></i>
                                 <h3> Explore </h3>
-                                <p class="text-muted"> new activities with your child and interact with them based on those interests </p>
+                                <p class="text-muted"> new activities with your child based on their interests & reading level </p>
                             </div>
                         </div>
                     <!-- </div> -->
