added privacy policy

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,6 +57,8 @@ p {
   margin-bottom: 20px;
 }
 
+tab1{ padding-left: 4em; }
+
 .navbar-default {
   background-color: white;
   border-color: rgba(34, 34, 34, 0.05);
