--- a/_layouts/privacy.html
+++ b/_layouts/privacy.html
@@ -6,7 +6,7 @@
 <body id="page-top">
   {% include nav.html %}
 
-  {% include privacy_policy_8_17_18.html %}
+  {% include privacy_policy_content.html %}
 
   {% include scripts.html %}
 </body>
