demo day list update

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,7 +5,7 @@
             <div class="overlay"></div>
             <div class="col-md-8 col-md-offset-2">
                 <h2 class="section-heading" style="color:rgb(255, 255, 255)">Become part of the community!</h2>
-                <p style="color:rgb(255, 255, 255)">Join our mailing list to stay updated as we grow!</p>
+                <p style="color:rgb(255, 255, 255)">Join our mailing list to stay updated!</p>
                 <!-- <a href="http://eepurl.com/c_FONT" class="btn btn-outline btn-xl">Join Mailing List</a> -->
                 
 <!-- Begin MailChimp Signup Form -->
@@ -17,7 +17,8 @@
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
-<form action="https://convexmind.us17.list-manage.com/subscribe/post?u=00f46787650d678d7c6541eb1&amp;id=8fc6ce452e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <!-- old ID: id=8fc6ce452e -->
+<form action="https://convexmind.us17.list-manage.com/subscribe/post?u=00f46787650d678d7c6541eb1&amp;id=1104ef891e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
