--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,13 +1,13 @@
 <section id="contact" class="contact bg-primary">
     <div class="container">
-        <h2>Follow us on social media!</h2>
+        <!-- <h2>Follow us on social media!</h2>
         <ul class="list-inline list-social">
             {% for network in site.social %}
             <li class="social-{{ network.title }}">
                 <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
             </li>
             {% endfor %}
-        </ul>
+        </ul> -->
         <!-- <ul class="list-inline list-social">
             <li class="social-twitter">
                 <a href="#"><i class="fa fa-twitter"></i></a>
